# billandslip

./: install.bat  install.ps1  payroll-slip.xlsx  run.bat
server/: .gitignore  Cargo.toml
server/data/: store.json
server/src/: config.rs  main.rs
server/src/handlers/: employees.rs  mod.rs  payroll.rs  payslip.rs
server/src/models/: employee.rs  mod.rs  payroll.rs  payslip.rs
server/src/services/: calculation.rs  mod.rs  pdf.rs
server/src/storage/: json_store.rs
web/: package-lock.json  package.json
web/src/: App.tsx  html2pdf.d.ts  index.css
web/src/api/: client.ts
web/src/components/: Layout.tsx  Sidebar.tsx
web/src/components/employees/: EmployeeForm.tsx
web/src/components/payroll/: PayrollConfigForm.tsx  PayrollEntryForm.tsx
web/src/components/payslip/: PayslipPreview.tsx
web/src/pages/: EmployeesPage.tsx  PayrollPage.tsx  PayslipPage.tsx
web/src/types/: index.ts
